--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "jest"
+    "test": "jest",
+    "watch" : "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -22,14 +23,24 @@
   },
   "homepage": "https://github.com/kruthigha/namaste-react#readme",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.39",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "parcel": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1"
   },
   "browserslist": [
